tests/baselines/reference/parserES5ForOfStatement2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ForOfStatement2.ts(1,9): error TS1123: Variable declaration list cannot be empty.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ForOfStatement2.ts (1 errors) ====
    for (var of X) {
            
!!! error TS1123: Variable declaration list cannot be empty.
    }